--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ body, html {
 
 #dock {
 	position: fixed;
-	bottom: 4px;
+	bottom: 10px;
 	left: 50%;
 	transform: translateX(-50%);
 	display: flex;
@@ -126,16 +126,17 @@ body, html {
 }
 
 .window-content {
-	padding: 20px;
+	padding: 10px 20px 20px 20px;
+	background-color: white;
+	display: flex;
+	flex-direction: column;
 }
 
 .window-content form input,
 .window-content form textarea {
 	width: 100%;
-	margin-bottom: 10px;
 	padding: 10px;
-	border-radius: 5px;
-	border: 1px solid #ccc;
+	border-style: none;
 }
 
 .window-content form button {
@@ -176,25 +177,57 @@ body, html {
 	cursor: pointer;
 }
 
-
-.window-content {
-	padding: 20px;
+/* Alignement horizontal label/input comme Mail macOS */
+.form-row {
+	display: flex;
+	align-items: center;
+	margin-bottom: 2px;
+	border-bottom: 1px solid #e5e2e2;
 }
 
-.window-content form input,
-.window-content form textarea {
-	width: 100%;
-	margin-bottom: 15px;
-	padding: 10px;
-	border-radius: 5px;
-	border: 1px solid #ccc;
+.form-row span {
+	width: auto; /* Largeur identique pour l'alignement */
+	text-align: left;
+	margin-right: 10px;
+	font-size: 14px; 
+	color: #7f7f7f;
 }
 
-.window-content form textarea {
-	height: 150px;
+.form-row input {
+	flex: 1;
+	padding: 8px;
+	font-size: 14px; 
+}
+
+.message-row {
+	flex: 1;
+	display: flex;
+	margin-bottom: 0;
+	border-style: none;
+}
+
+.message-row textarea {
+	flex: 1;
+	height: 100%;
 	resize: none;
+	font-size: 14px; 
+}
+
+#contact-form {
+	display: flex;
+	flex-direction: column;
+	flex: 1;
 }
 
 .hidden {
 	display: none;
+}
+
+.maximize#mail-window {
+	width: 100%;
+	height: 100%;
+}
+
+.maximize#mail-content {
+	height: calc(100vh - 40px);
 }
