--- a/style.css
+++ b/style.css
@@ -133,7 +133,7 @@ body, html {
 }
 
 .window-content {
-  padding: 10px 20px 20px;
+  padding: 12px;
   background-color: white;
   display: flex;
   flex-direction: column;
