--- a/style.css
+++ b/style.css
@@ -147,7 +147,7 @@ body, html {
 .window-content form textarea,
 .window-content form input {
   width: 100%;
-  padding-top: 10px;
+  padding: 10px;
   border-style: none;
 }
 
@@ -341,4 +341,22 @@ body, html {
 
 .zoom-controls button:hover {
 	background-color: #d0d0d0;
+}
+
+div#pages-window-content {
+	padding-bottom: 0px;
+	text-align: center;
+}
+
+div#pdf-container {
+	width:100%; 
+	height:100%; 
+	overflow: auto;
+	padding: 10px 10px 0px 10px;
+	background-color: #4b4b4b;
+}
+
+#pdf-footer {
+	height: 10px;
+	background-color: #4b4b4b;
 }
