--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ body, html {
   border-radius: 50%;
   background-color: white;
   position: absolute;
-  bottom: -2px;
+  bottom: -5px;
   left: 50%;
   transform: translateX(-50%); /* Centre horizontalement */
   opacity: 0;
@@ -386,7 +386,7 @@ div#pdf-container {
 
 /* === Menu latéral === */
 .notes-sidebar {
-  width: 180px;
+  width: 190px;
   background: #f8f8f8;
   border-right: 1px solid #ddd;
   padding: 15px;
@@ -463,4 +463,34 @@ div#pdf-container {
 
 .notes-content p {
   margin-bottom: 24px; /* Ajuste l'espacement selon ton besoin */
+}
+
+.github-preview {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	padding: 20px;
+	background: #f5f5f5;
+	height: 100%;
+}
+
+.github-preview img {
+	max-width: 90%;
+	border-radius: 10px;
+	margin-bottom: 15px;
+}
+
+.github-button {
+	text-decoration: none;
+	background: #24292e;
+	color: white;
+	padding: 10px 15px;
+	border-radius: 5px;
+	font-weight: bold;
+	transition: 0.2s;
+}
+
+.github-button:hover {
+	background: #0366d6;
 }
